test_regress/t/t_property_unsup.out
%Error: t/t_property_unsup.v:45:16: Can't find definition of variable: 'a'
   45 |   sva_implies2 sva_implies2 (.*);
      |                ^~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_property_unsup.v:45:16: Can't find definition of variable: 'b'
   45 |   sva_implies2 sva_implies2 (.*);
      |                ^~~~~~~~~~~~
%Error: Exiting due to
